@@ -191,13 +191,13 @@ class CommentForm(extensible.ExtensibleForm, form.Form):
             # Add a comment to the conversation
             comment_id = conversation.addComment(comment)
 
-        # If a user post a comment and moderation is enabled, a message is shown
-        # to the user that his/her comment awaits moderation. If the user has 
-        # manage right, he/she is redirected directly to the comment.
+        # If a user posts a comment and moderation is enabled, a message is 
+        # shown to the user that his/her comment awaits moderation. If the user 
+        # has manage right, he/she is redirected directly to the comment.
         can_manage = getSecurityManager().checkPermission('Manage portal', 
                                                           context)
-        if wf.getChainForPortalType('Discussion Item') == \
-            ('comment_review_workflow',) and not can_manage:
+        comment_review_state = wf.getInfoFor(comment, 'review_state')
+        if comment_review_state == 'pending' and not can_manage:
             # Show info message when comment moderation is enabled
             IStatusMessage(self.context.REQUEST).addStatusMessage(
                 _("Your comment awaits moderator approval."),
